# USD

./: .gitignore  CMakeLists.txt
ct7build/: buildTutorial.txt  buildUSD.sh  pysideBuild.sh  runCMake.sh  sipConfigure.txt
